--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
-Name : <input type="text" name="username" value="{{username}}">
-Password : <input type="password" name="password" value="{{password}}">
-<button >Login</button>
+Name : <input type="text" name="username" [(ngModel)]="username" >
+Password : <input type="password" name="password">
+<button (click) = "handleLogin()" >Login</button>
