--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-welcome></app-welcome> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <!-- <div>App component starts</div> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
