--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
-Name : <input type="text" name="username" [(ngModel)]="username" >
-Password : <input type="password" name="password">
-<button (click) = "handleLogin()" >Login</button>
+
+<div>
+    Name : <input type="text" name="username" [(ngModel)]="username" >
+    Password : <input type="password" name="password">
+    <!-- Username : {{username}} -->
+    <button (click) = "handleLogin()" >Login</button>
+</div>
