--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <app-welcome></app-welcome> -->
 <!-- <app-login></app-login> -->
 <!-- <div>App component starts</div> -->
+<app-menu></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
