--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,5 @@
-Welcome {{name}}. <br>
-Go to your <a routerLink ="/todos">todo's</a> List.
+<h1>Welcome !</h1>
+<div class="container">
+     Welcome {{name}}. Go to your <a routerLink ="/todos">todo's</a> List.
+
+</div>
