--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <!-- <app-login></app-login> -->
 <!-- <div>App component starts</div> -->
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
