--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+       <span class="text-muted"> All rights reserved to prashant</span>
+    </div>
+</footer>
