--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,7 @@
 <h1>Welcome !</h1>
 <div class="container">
-     Welcome {{name}}. Go to your <a routerLink ="/todos">todo's</a> List.
+     Welcome {{name}}. Go to your <a routerLink ="/todos">todo's</a> List.<br>
+     Click here to get customized welcome message <button class="btn btn-success" (click)="getWelcomeMessage()">Get Message</button>
+
 
 </div>
