--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,5 +3,7 @@
      Welcome {{name}}. Go to your <a routerLink ="/todos">todo's</a> List.<br>
      Click here to get customized welcome message <button class="btn btn-success" (click)="getWelcomeMessage()">Get Message</button>
 
+     <h3>{{welcomeMessage}}</h3>
+
 
 </div>
